Fix rendering and make the board visible

--- a/less/layout.less
+++ b/less/layout.less
@@ -67,3 +67,9 @@
     position: relative;
   }
 }
+
+#glcanvas {
+  display: block;
+  margin: 0 auto;
+  background: #2a2a3a;
+}
